fixed item name overflow in inventory display

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -101,6 +101,7 @@ body {
   height: 40px;
   text-align: left;
   user-select: none;
+  overflow: hidden;
 }
 
 .mc-td > div {
